[gd_scene load_steps=8 format=3 uid="uid://ba84xdhyr2brm"]

[ext_resource type="PackedScene" uid="uid://dp6a6xa14qwsg" path="res://entitys/Animações/animação_monge_boss.tscn" id="1_1nba3"]
[ext_resource type="Script" uid="uid://dgsd3okjg2lh0" path="res://scripts/monge_boss.gd" id="1_dift6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rwuqp"]
radius = 19.0
height = 64.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dift6"]
size = Vector2(44, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx1ot"]
size = Vector2(27, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16j51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnmg1"]
size = Vector2(22, 38.4167)

[node name="Monge Boss" type="CharacterBody2D" groups=["inimigos"]]
collision_layer = 4
script = ExtResource("1_dift6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_rwuqp")

[node name="PlayerDetector" type="RayCast2D" parent="."]
target_position = Vector2(1, 0)
collision_mask = 2

[node name="Monge_boss" parent="." instance=ExtResource("1_1nba3")]
scale = Vector2(0.9, 0.9)
offset = Vector2(-2, 2)
region_rect = Rect2(0, 142, 62, 71)

[node name="AnimationPlayer" parent="Monge_boss" index="0" groups=["inimigos"]]
autoplay = "Idle"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["pogo"]]
shape = SubResource("RectangleShape2D_dift6")
debug_color = Color(0.775963, 0.440196, 0.0144619, 0.42)

[node name="Staff Hitbox" type="Area2D" parent="." groups=["pogo"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Staff Hitbox" groups=["pogo"]]
position = Vector2(0, 3)
scale = Vector2(10, 1)
shape = SubResource("RectangleShape2D_mx1ot")
disabled = true
debug_color = Color(0, 0.391043, 0.750284, 0.42)

[node name="Cima hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cima hitbox"]
scale = Vector2(10, 7)
shape = SubResource("RectangleShape2D_16j51")
disabled = true

[node name="Roll Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roll Hitbox"]
position = Vector2(0, -30.8125)
scale = Vector2(2, 1.5)
shape = SubResource("RectangleShape2D_tnmg1")
debug_color = Color(0.449439, 0.596355, 0, 0.42)

[node name="attack_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Staff Hitbox" to="." method="_on_staff_hitbox_area_entered"]
[connection signal="area_entered" from="Roll Hitbox" to="." method="_on_roll_hitbox_area_entered"]
[connection signal="area_exited" from="Roll Hitbox" to="." method="_on_roll_hitbox_area_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]

[editable path="Monge_boss"]
